add refactor to DiscountServiceImpl